--- a/style.css
+++ b/style.css
@@ -10,9 +10,20 @@ body{
     width: 100%;
     height: 100vh;
 }
-
 .dropdown-menu{
-    display: none;
+    display: none; 
+    border: 1px solid;
+    border-top: 0;
+    border-radius: 8px;
+}
+.dropdown-menu-item{
+    text-align: center;
+    margin-bottom: 3px;
+    padding: 4px;
+}
+.dropdown-menu-item:hover{
+    background-color: blueviolet;
+    color: white;
 }
 .inputFieldHead{
     width: 100%;
@@ -25,19 +36,18 @@ body{
     width: 15px;
 }
 .dropdownField{
+    width: 100%;
     display: flex;
     align-items: center;
     border-radius: 8px;
+    border: 1px solid rgba(128, 128, 128, 0.141);
 }
 .dropdown-select-btn{
     width: 15px;
 }
-form{
-    border: 2px;
-    border-color: rgb(218, 218, 218);
-    border-style: solid; 
+form{ 
     box-shadow: 2px 2px 5px gray;
-    width: 60%;
+    width: 400px;
     padding-left: 20px;
     padding-right:20px;
     display: flex;
@@ -50,14 +60,11 @@ input{
     width: 94%;
     padding: 8px;
     border-radius: 8px;
-    border: 1px solid;
+    border: 1px solid rgba(128, 128, 128, 0.237);
 }
 .thirdInput{
     border: none;
-}
-.dropdownField{
-    border: 1px solid;
-    width: 100%;
+    background-color: transparent;
 }
 .submitBtn{
     color: white;
@@ -69,4 +76,5 @@ input{
 }
 .grossIncomeError,.extraIncomeError,.ageGroupError,.deductionsError{
     display: none;
+    color: red;
 }
